--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
         <a href="https://docs.google.com/forms/d/e/1FAIpQLSfNUo9myhd3t8KRJ_EWnHfFZe3pV5Oq5Keh-kmItmn4ezCveA/viewform?embedded=true">Chargement…</iframe>" class="book-button">Réserver</a>
     
     </div>
+    <!-- <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfNUo9myhd3t8KRJ_EWnHfFZe3pV5Oq5Keh-kmItmn4ezCveA/viewform?embedded=true" width="640" height="1010" frameborder="0" marginheight="0" marginwidth="0">Chargement…</iframe> -->
 
     <footer>
         <p>&copy; 2024 Hôtel Believe. Tous droits réservés aux clients. Conçu par ETSONI ODJEDRA Dieudonné et JEANNOT KOMBI</p>
